@@ -8,6 +8,7 @@ import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 
 public class ScriptGoogle {
@@ -48,13 +49,13 @@ public class ScriptGoogle {
 			urlStr += contaPrincipal;
 		}
 				
-		urlStr += "?q=" + URLEncoder.encode(text, "UTF-8") + "&target=" + langTo + "&source=" + langFrom;
+		urlStr += "?q=" + URLEncoder.encode(text, StandardCharsets.UTF_8) + "&target=" + langTo + "&source=" + langFrom;
 
 		URL url = new URL(urlStr);
 		StringBuilder response = new StringBuilder();
 		HttpURLConnection con = (HttpURLConnection) url.openConnection();
 		con.setRequestProperty("User-Agent", "Mozilla/5.0");
-		BufferedReader in = new BufferedReader(new InputStreamReader(con.getInputStream(), "UTF-8"));
+		BufferedReader in = new BufferedReader(new InputStreamReader(con.getInputStream(), StandardCharsets.UTF_8));
 		String inputLine;
 		while ((inputLine = in.readLine()) != null) {
 			response.append(inputLine);
